api-management/3-api-lifecycle-management/manifests/api-v1.1-weighted.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weather-api
  namespace: traefik-hub
  annotations:
    hub.traefik.io/api-version: weather-api-v1
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`api.docker.localhost`) && PathPrefix(`/weather`)
    kind: Rule
    services:
    - name: weather-api-wrr
      port: 3000
      kind: TraefikService
