api-management/3-api-lifecycle-management/manifests/api-v1.1.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-lifecycle-apimanagement-weather-api-v1-1
  namespace: apps
  annotations:
    hub.traefik.io/api-version: api-lifecycle-apimanagement-weather-api-v1
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`api.lifecycle.apimanagement.docker.localhost`) && PathPrefix(`/weather-multi-versions`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
    middlewares:
      - name: stripprefix-weather

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-lifecycle-apimanagement-weather-api-v1-1-preview
  namespace: apps
  annotations:
    hub.traefik.io/api-version: api-lifecycle-apimanagement-weather-api-v1-1
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`api.lifecycle.apimanagement.docker.localhost`) && PathPrefix(`/weather-multi-versions`) && Header(`X-Version`, `preview`)
    kind: Rule
    services:
    - name: weather-app-forecast
      port: 3000
    middlewares:
      - name: stripprefix-weather
