api-management/3-api-lifecycle-management/manifests/api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-lifecycle-apimanagement-weather-api
  namespace: apps
  annotations:
    hub.traefik.io/api: api-lifecycle-apimanagement-weather-api # <=== Link to the API using its name
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`api.lifecycle.apimanagement.docker.localhost`) && PathPrefix(`/weather`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
